<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.inshorts.presentation.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_detail"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.inshorts.presentation.detail.DetailFragment"
        android:label="Movie"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="movieId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.inshorts.presentation.search.SearchFragment"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_search_to_detail"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/savedFragment"
        android:name="com.example.inshorts.presentation.saved.SavedFragment"
        android:label="@string/nav_saved"
        tools:layout="@layout/fragment_saved">
        <action
            android:id="@+id/action_saved_to_detail"
            app:destination="@id/detailFragment" />
    </fragment>
</navigation>
